terraform/app-infra/ec2.tf
# Get existing trust policy to be used by EC2 service to assume role
data "aws_iam_policy_document" "policy_for_ec2_assume" {
  statement {
    actions = ["sts:AssumeRole"]
    principals {
      type        = "Service"
      identifiers = ["ec2.amazonaws.com"]
    }
  }
}

# Creating a role using trust policy
resource "aws_iam_role" "ec2_role" {
  name               = "appserver-ec2-role"
  assume_role_policy = data.aws_iam_policy_document.policy_for_ec2_assume.json
}

// Attach EC2 SSM agent IAM role for access
resource "aws_iam_role_policy_attachment" "ssm" {
  role       = aws_iam_role.ec2_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
}

#################################

### Create permission policy and attach to role - For SSM Parameter store
data "aws_iam_policy_document" "permission_to_ssm_read" {
  statement {
    actions   = ["ssm:GetParameter", "ssm:GetParameters"]
    resources = [var.ssm_parameter_store_generic_arn]
  }
}
resource "aws_iam_role_policy" "attach_perm_ssm_read" {
  name   = "appserver-ssm-read-perm"
  role   = aws_iam_role.ec2_role.id
  policy = data.aws_iam_policy_document.permission_to_ssm_read.json
}

### Create permission policy and attach to role - For S3 bucket
data "aws_iam_policy_document" "permission_to_access_s3_bucket" {
  statement {
    actions   = ["s3:GetObject", "s3:PutObject"]
    resources = ["${aws_s3_bucket.groovify_app_s3.arn}/*"]
  }
}
resource "aws_iam_role_policy" "attach_perm_s3_bucket_access" {
  name   = "appserver-s3-readwrite-perm"
  role   = aws_iam_role.ec2_role.id
  policy = data.aws_iam_policy_document.permission_to_access_s3_bucket.json
}

# Using Credentials for Cognito, and DocumentDB rather than attaching permissions as latter would involve changing server code to update with AWS SDK
#################################

# Create instance profile for appserver with role to read SSM parameters
resource "aws_iam_instance_profile" "appserver_instance_profile" {
  name = "appserver-instance-profile"
  role = aws_iam_role.ec2_role.name
}


# ---------------------------------------------------------------------------------

data "aws_ami" "ubuntu" {
  most_recent = true

  owners = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

# Will connect using SSM agent
resource "aws_instance" "groovify_app_server" {
  ami                         = var.project_env == "production" ? data.aws_ami.ubuntu.id : var.custom_dev_ubuntu_ami_id
  instance_type               = var.appserver_instance_type
  associate_public_ip_address = false
  iam_instance_profile        = aws_iam_instance_profile.appserver_instance_profile.name
  subnet_id                   = element(module.vpc.private_subnets, 0)
  user_data_base64            = var.project_env == "production" ? base64encode(file("./app-server-user-data.sh")) : base64encode(file("./devapp-server-user-data.sh"))
  vpc_security_group_ids      = [aws_security_group.groovify_appserver_sg.id]
  tags = {
    Project   = var.project_name_tag
    Terraform = "true"
  }

  metadata_options {
    http_endpoint = "enabled"
    http_tokens   = "required"
  }

  root_block_device {
    encrypted = true
  }

  depends_on = [
    module.vpc,
    aws_ssm_parameter.cognito_clientid,
    aws_ssm_parameter.cognito_clientsec,
    aws_ssm_parameter.cognito_userpoolid,
    aws_ssm_parameter.vite_cognito_clientid,
    aws_ssm_parameter.docdb_connection_string
  ]
}

output "app_server_private_ip" {
  value = aws_instance.groovify_app_server.private_ip
}

output "app_server_instance_id" {
  value = aws_instance.groovify_app_server.id
}
